cabal-version:       >=1.10
name:                minecraft-thing
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              mlugg
maintainer:          mlugg@mlugg.co.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable mc-thing
  main-is:             Main.hs
  other-modules:       Common, Parse, Output
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14, network, network-run, bytestring, attoparsec, text
  hs-source-dirs:      src
  default-language:    Haskell2010
