cabal-version:       2.0
name:                minecraft-thing
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             Unlicense
license-file:        LICENSE
author:              mlugg
maintainer:          mlugg@mlugg.co.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable mc-thing
  main-is:             Main.hs
  other-modules:       Common, Parse, Output
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, network, network-run, bytestring, text, megaparsec, parser-combinators, mjson
  hs-source-dirs:      src
  default-language:    Haskell2010
